# pass-guard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  build_dev_branch.yml  rust.yml
src/: main.rs
src/crypto/: aes_256_gcm.rs  hash.rs  mod.rs
src/gui/: create_vault_modal.rs  mod.rs  pass_guard_app.rs
src/models/: mod.rs  record.rs  sub_vault.rs  vault.rs
src/utils/: defs.rs  mod.rs  unsafe_cast.rs
